# feed-bkd

./: .env  Cargo.toml
migrations/2021-03-07-155317_update_posts_table_with_columns/: down.sql  up.sql
src/: errors.rs  lib.rs  main.rs  schema.rs  validators.rs
src/config/: setup.rs
src/controllers/: post.rs
src/errors/: field_validator.rs  request_errors.rs
src/models/: posts.rs
src/response/: response_generator.rs
src/routes/: auth.rs  post.rs
src/src/: schema.rs
src/validators/: basics.rs  posts.rs
