[package]
name = "monoli"
version = "0.1.0"
authors = ["tolumide-ng <tolumideshopein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
chrono = "0.4"
validator = { version = "0.12", features = ["derive"] }
serde = { version = "1.0.123", features = ["derive"] }