[package]
name = "monoli"
version = "0.1.0"
authors = ["tolumide-ng <tolumideshopein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
chrono = "0.4"
validator = { version = "0.12", features = ["derive"] }
serde = { version = "1.0.123", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"


[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "diesel_postgres_pool"]